--- a/app/www/css/style.css
+++ b/app/www/css/style.css
@@ -139,12 +139,12 @@ body div.popup-container.popup-showing.active div div.popup-body
   overflow: scroll;
 }
 
-#personLis
+/*#personLis
 {
   max-height: 40vh;
   overflow: scroll;
 }
-
+*/
 #editProfilePopover
 {
   max-height: 80vh;
