fixes #10, fixes #3. Release version v2.0

--- a/app/www/templates/forms/editMessForm.html
+++ b/app/www/templates/forms/editMessForm.html
@@ -1,5 +1,10 @@
 <form name="editMessForm">
     <div class="list card vertical_center">
+        <!-- No of days -->
+        <label class="item item-input item-floating-label">
+            <span class="input-label">No of Days</span>
+            <input type="number" ng-model="details.no_of_days" placeholder="No of Days">
+        </label>
         <!-- Establishment Fee -->
         <label class="item item-input item-floating-label">
             <span class="input-label">Establishment Fee</span>
