--- a/app/www/templates/mess/admin.html
+++ b/app/www/templates/mess/admin.html
@@ -80,10 +80,10 @@
         <div class="card stable-bg list padding" ng-show="showDateCard">
             <div ng-show="profile.level>2" class="item tabs tabs-secondary tabs-icon-left">
                 <a class="tab-item" ng-click="showAddDatePopover()" data-ink-color="#336699" data-ink-opacity="0.5">
-                    <i class="icon ion-plus-round"></i> Add
+                    <i class="icon ion-plus-round"></i> Add Mess Leave
                 </a>
                 <a class="tab-item" ng-click="showDeleteDatePopover()" data-ink-color="#336699" data-ink-opacity="0.5">
-                    <i class="icon ion-close-round"></i> Remove
+                    <i class="icon ion-close-round"></i> Remove Mess Leave
                 </a>
             </div>
             <div ng-repeat="date in dates">
