--- a/app/www/templates/menu.html
+++ b/app/www/templates/menu.html
@@ -12,7 +12,7 @@
     <ion-side-menu side="left">
         <ion-header-bar class="dark-bg expanded">
             <span class="avatar" style="background: url('img/icon.png'); background-size: cover; background-color: black;"></span>
-            <h2>Ic Mess App</h2>
+            <h2>ICC Mess App</h2>
         </ion-header-bar>
         <ion-content class="stable-bg has-expanded-header">
             <ion-list>
