--- a/app/www/templates/menu.html
+++ b/app/www/templates/menu.html
@@ -28,6 +28,9 @@
                 <ion-item nav-clear menu-close ui-sref="app.admin" ng-show="profile.level>1">
                     <i class="icon ion-ios-gear"></i> Admin Panel
                 </ion-item>
+                <ion-item nav-clear menu-close ui-sref="app.inmates" ng-show="profile.level>1">
+                    <i class="icon ion-android-people"></i> Inmate List
+                </ion-item>
                 <ion-item nav-clear menu-close ui-sref="app.feedback">
                     <i class="icon ion-ios-paper"></i> FeedBack
                 </ion-item>
